--- a/home.html
+++ b/home.html
@@ -592,13 +592,13 @@
           </div>
           <!-- Collection Slide-->
           <div class="collection-slide owl-carousel">
+		  <!-- Collection Card-->
+            <div class="card collection-card"><a href="#"><img src="img/product/meta.png" alt=""></a>
+              <div class="collection-title"><span>Meta</span><span class="badge bg-danger">3</span></div>
+            </div>
             <!-- Collection Card-->
             <div class="card collection-card"><a href="#"><img src="img/product/google.png" alt=""></a>
               <div class="collection-title"><span>Google</span><span class="badge bg-danger">5</span></div>
-            </div>
-            <!-- Collection Card-->
-            <div class="card collection-card"><a href="#"><img src="img/product/Meta.png" alt=""></a>
-              <div class="collection-title"><span>Meta</span><span class="badge bg-danger">3</span></div>
             </div>
             <!-- Collection Card-->
             <div class="card collection-card"><a href="#"><img src="img/product/cisco.png" alt=""></a>
