--- a/shop-archi-services.html
+++ b/shop-archi-services.html
@@ -77,20 +77,14 @@
                 <div class="card-body">
                   <!-- Badge--><span class="badge rounded-pill badge-warning">للبيع</span>
                   <!-- Wishlist Button--><a class="wishlist-btn" href="#"><i class="fa-solid fa-heart"></i></a>
-                  <!-- Thumbnail --><a class="product-thumbnail d-block" href="#"><img class="mb-2" src="img/product/archi/1.png" alt="">
-                    <!-- Offer Countdown Timer: Please use event time this format: YYYY/MM/DD hh:mm:ss -->
-                    <ul class="offer-countdown-timer d-flex align-items-center shadow-sm" data-countdown="2023/12/31 23:59:59">
-                      <li><span class="days">0</span>d</li>
-                      <li><span class="hours">0</span>h</li>
-                      <li><span class="minutes">0</span>m</li>
-                      <li><span class="seconds">0</span>s</li>
-                    </ul></a>
-                  <!-- Product Title --><a class="product-title" href="#">خطة ثنائية الأبعاد</a>
+                  <!-- Thumbnail --><a class="product-thumbnail d-block" href="single-archi-2d.html"><img class="mb-2" src="img/product/archi/1.png" alt="">
+                    
+                  <!-- Product Title --><a class="product-title" href="single-archi-2d.html">خطة ثنائية الأبعاد</a>
                   <!-- Product Price -->
-                  <p class="sale-price">$13<span>$42</span></p>
+                  <p class="sale-price">150 د.م</p></br>
                   <!-- Rating -->
                   <div class="product-rating"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></div>
-                  <!-- Add to Cart --><a class="btn btn-success btn-sm" href="#"><i class="fa-solid fa-plus"></i></a>
+                  <!-- Add to Cart --><a class="btn btn-success btn-sm" href="single-archi-2d.html"><i class="fa-solid fa-plus"></i></a>
                 </div>
               </div>
             </div>
@@ -100,13 +94,13 @@
                 <div class="card-body">
                   <!-- Badge--><span class="badge rounded-pill badge-success">للبيع</span>
                   <!-- Wishlist Button--><a class="wishlist-btn" href="#"><i class="fa-solid fa-heart"> </i></a>
-                  <!-- Thumbnail --><a class="product-thumbnail d-block" href="#"><img class="mb-2" src="img/product/archi/2.png" alt=""></a>
-                  <!-- Product Title --><a class="product-title" href="#">خطة ثلاثية الأبعاد</a>
+                  <!-- Thumbnail --><a class="product-thumbnail d-block" href="single-archi-3d.html"><img class="mb-2" src="img/product/archi/2.png" alt=""></a>
+                  <!-- Product Title --><a class="product-title" href="single-archi-3d.html">خطة ثلاثية الأبعاد</a>
                   <!-- Product Price -->
-                  <p class="sale-price">$74<span>$99</span></p>
+                  <p class="sale-price">500 د.م</p></br>
                   <!-- Rating -->
                   <div class="product-rating"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></div>
-                  <!-- Add to Cart --><a class="btn btn-success btn-sm" href="#"><i class="fa-solid fa-plus"></i></a>
+                  <!-- Add to Cart --><a class="btn btn-success btn-sm" href="single-archi-3d.html"><i class="fa-solid fa-plus"></i></a>
                 </div>
               </div>
             </div>
@@ -116,13 +110,13 @@
                 <div class="card-body">
                   <!-- Badge--><span class="badge rounded-pill badge-success">للبيع</span>
                   <!-- Wishlist Button--><a class="wishlist-btn" href="#"><i class="fa-solid fa-heart"> </i></a>
-                  <!-- Thumbnail --><a class="product-thumbnail d-block" href="#"><img class="mb-2" src="img/product/archi/3.png" alt=""></a>
-                  <!-- Product Title --><a class="product-title" href="#">تصميم داخلي</a>
+                  <!-- Thumbnail --><a class="product-thumbnail d-block" href="single-archi-interior.html"><img class="mb-2" src="img/product/archi/3.png" alt=""></a>
+                  <!-- Product Title --><a class="product-title" href="single-archi-interior.html">تصميم داخلي</a>
                   <!-- Product Price -->
-                  <p class="sale-price">$74<span>$99</span></p>
+                  <p class="sale-price">750 د.م</p></br>
                   <!-- Rating -->
                   <div class="product-rating"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></div>
-                  <!-- Add to Cart --><a class="btn btn-success btn-sm" href="#"><i class="fa-solid fa-plus"></i></a>
+                  <!-- Add to Cart --><a class="btn btn-success btn-sm" href="single-archi-interior.html"><i class="fa-solid fa-plus"></i></a>
                 </div>
               </div>
             </div>
