--- a/single-archi-2d.html
+++ b/single-archi-2d.html
@@ -171,27 +171,27 @@
                 <div class="card-body">
                   <!-- Badge--><span class="badge rounded-pill badge-warning">للبيع</span>
                   <!-- Wishlist Button--><a class="wishlist-btn" href="#"><i class="fa-solid fa-heart">                       </i></a>
-                  <!-- Thumbnail --><a class="product-thumbnail d-block" href="#"><img class="mb-2" src="img/product/archi/3.png" alt="">
+                  <!-- Thumbnail --><a class="product-thumbnail d-block" href="single-archi-interior.html"><img class="mb-2" src="img/product/archi/3.png" alt="">
                    
-                  <!-- Product Title --><a class="product-title" href="#">تصميم داخلي</a>
+                  <!-- Product Title --><a class="product-title" href="single-archi-interior.html">تصميم داخلي</a>
                   <!-- Product Price -->
-                  <p class="sale-price">0.00 د.م</p>
+                  <p class="sale-price">750 د.م</p></br>
                   <!-- Rating -->
                   <div class="product-rating"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></div>
-                  <!-- Add to Cart --><a class="btn btn-success btn-sm" href="#"><i class="fa-solid fa-plus"></i></a>
+                  <!-- Add to Cart --><a class="btn btn-success btn-sm" href="single-archi-interior.html"><i class="fa-solid fa-plus"></i></a>
                 </div>
               </div>
               <div class="card product-card bg-gray shadow-none">
                 <div class="card-body">
                   <!-- Badge--><span class="badge rounded-pill badge-success">للبيع</span>
                   <!-- Wishlist Button--><a class="wishlist-btn" href="#"><i class="fa-solid fa-heart">                       </i></a>
-                  <!-- Thumbnail --><a class="product-thumbnail d-block" href="#"><img class="mb-2" src="img/product/archi/2.png" alt=""></a>
-                  <!-- Product Title --><a class="product-title" href="#">خطة ثلاثية الأبعاد</a>
+                  <!-- Thumbnail --><a class="product-thumbnail d-block" href="single-archi-3d.html"><img class="mb-2" src="img/product/archi/2.png" alt=""></a>
+                  <!-- Product Title --><a class="product-title" href="single-archi-3d.html">خطة ثلاثية الأبعاد</a>
                   <!-- Product Price -->
-                  <p class="sale-price">0.00 د.م</p>
+                  <p class="sale-price">500 د.م</p></br>
                   <!-- Rating -->
                   <div class="product-rating"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></div>
-                  <!-- Add to Cart --><a class="btn btn-success btn-sm" href="#"><i class="fa-solid fa-plus"></i></a>
+                  <!-- Add to Cart --><a class="btn btn-success btn-sm" href="single-archi-3d.html"><i class="fa-solid fa-plus"></i></a>
                 </div>
               </div>
               
