--- a/single-archi-interior.html
+++ b/single-archi-interior.html
@@ -66,19 +66,13 @@
 <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="img/product/archi/28.webp" class="d-block w-100" alt="...">
+      <img src="img/product/archi/33.webp" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="img/product/archi/29.webp" class="d-block w-100" alt="...">
+      <img src="img/product/archi/34.webp" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="img/product/archi/30.webp" class="d-block w-100" alt="...">
-    </div>
-	<div class="carousel-item">
-      <img src="img/product/archi/31.webp" class="d-block w-100" alt="...">
-    </div>
-	<div class="carousel-item">
-      <img src="img/product/archi/32.webp" class="d-block w-100" alt="...">
+      <img src="img/product/archi/35.webp" class="d-block w-100" alt="...">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
@@ -92,8 +86,8 @@
         <div class="product-title-meta-data bg-white mb-3 py-3">
           <div class="container d-flex justify-content-between rtl-flex-d-row-r">
             <div class="p-title-price">
-              <h5 class="mb-1">تصميم داخلي وخارجي 3د وتصميم مساقط 2د</h5>
-              <p class="sale-price mb-0 lh-1">سعر الخدمة يبدأ من 1500 د.م</p>
+              <h5 class="mb-1">تصميم ديكورات داخلية متكاملة</h5>
+              <p class="sale-price mb-0 lh-1">سعر الخدمة يبدأ من 750 د.م</p>
             </div>
             <div class="p-wishlist-share"><a href="#"><i class="fa-solid fa-heart"></i></a></div>
           </div>
@@ -112,21 +106,15 @@
           <div class="container">
             <h6>الوصف</h6>
             <p>
-* يتم تقديم التصميم 3d في شكل صور PNG.JPG او pdf حسب رغبة العميل</br>
-* عدد 3 صورة لكل فراغ موضحة كافة التفاصيل وكذلك لوحات شوب دروينج تشمل الابعاد والخامات المستخدمة</br>
-* العمل يتم انجازة في اسرع وقت وبأعلى كفاءة ممكنة والاهم هو الرضى التام للعميل</br>
-* تكلفة الخدمة فقط تكون مقابل تصميم 15 متر مربع</br>
-يمكنني القيام بما يلي
+وسنقوم بتصميم ديكور داخلي لركن او اكثر سواء كان مطعم وجبات سريعة او فندق او غرف سكنية او اي شيء يطلبه المشتري</br>
+كما ان المشتري سيكون على اضطلاع اولاً بأول على مجريات العمل حتى يكون راضي عن جميع الجزئيات</br>
+وسنقدم باذن الله مع التصميم صور بانورامية 360 درجة دوارة حتى يتسنى للعميل مشاهدة التصميم بجميع اجزاءه</br>
+مع امكانية التعديل في حال ان جزء ما لم ينل اعجاب
 </p>
             <ul class="mb-3 ps-3">
-              <li><i class="fa-solid fa-check me-1"></i> تصميمات داخلية</li>
-              <li><i class="fa-solid fa-check me-1"></i> تصميمات واجهات خارجية</li>
-              <li> <i class="fa-solid fa-check me-1"></i>  تنسيق حدائق ولاند سكيب</li>
-			  <li> <i class="fa-solid fa-check me-1"></i>  تصميمات مستدامة مع توضيح كافة الخامات المستخدمة وكيفية الحصول عليها</li>
-			  <li> <i class="fa-solid fa-check me-1"></i>  عمل فيديو 3d animation</li>
-			  <li> <i class="fa-solid fa-check me-1"></i>  مساقط افقية ثلاثية الابعاد</li>
+              <li><i class="fa-solid fa-check me-1"></i> والسعر 150 د.م  لكل 3 متر مربع</li>
             </ul>
-            <p class="mb-0">راسلنا ولا تتردد في ذلك ابدا حتى وان كان للاستشارة فالعمارة تهدف لخلق بيئة جميلة للجميع</p>
+            <p class="mb-0">والله الموفق</p>
           </div>
         </div>
 		
@@ -138,61 +126,61 @@
 <div dir="rtl" Lang="ar" class="accordion" id="accordionExample">
   <div class="accordion-item">
     <h2 class="accordion-header">
-      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-       صورة بانوراما VR للتصميم الداخلي
+      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">    	
+تصمييم 12 متر مربع
       </button>
     </h2>
     <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
       <div class="accordion-body">
-        <strong>مقابل 1700 د.م</strong> إضافية على سعر الخدمة. سيزيد مدة التنفيذ يومين إضافيين.</br> <code><a class="text-danger" href="#">شراء من هنا <i class="fa-solid fa-cart-arrow-down"></i></a></code>
+        <strong>مقابل 700 د.م</strong> إضافية على سعر الخدمة. سيزيد مدة التنفيذ يومين إضافيين.</br> <code><a class="text-danger" href="#">شراء من هنا <i class="fa-solid fa-cart-arrow-down"></i></a></code>
       </div>
     </div>
   </div>
   <div class="accordion-item">
     <h2 class="accordion-header">
-      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-        تصميم داخلي لفراغ 60 متر مربع
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">     	
+تصميم 21 متر مربع
       </button>
     </h2>
     <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
      <div class="accordion-body">
-        <strong>مقابل 2500 د.م</strong>   إضافية على سعر الخدمة. سيزيد مدة التنفيذ يومين إضافيين.</br> <code><a class="text-danger" href="#">شراء من هنا <i class="fa-solid fa-cart-arrow-down"></i></a></code>
+        <strong>مقابل 1050 د.م</strong> إضافية على سعر الخدمة. سيزيد مدة التنفيذ 4 أيام إضافية.</br> <code><a class="text-danger" href="#">شراء من هنا <i class="fa-solid fa-cart-arrow-down"></i></a></code>
       </div>
     </div>
   </div>
   <div class="accordion-item">
     <h2 class="accordion-header">
       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">        	
-      رسومات تنفيذية للتصميم
+      تصميم 30 متر مربع
       </button>
     </h2>
     <div id="collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
       <div class="accordion-body">
-        <strong>مقابل 3500 د.م</strong> إضافية على سعر الخدمة. سيزيد مدة التنفيذ 3 أيام إضافية.</br> <code><a class="text-danger" href="#">شراء من هنا <i class="fa-solid fa-cart-arrow-down"></i></a></code>
+        <strong>مقابل 1200 د.م</strong> إضافية على سعر الخدمة. سيزيد مدة التنفيذ 3 أيام إضافية.</br> <code><a class="text-danger" href="#">شراء من هنا <i class="fa-solid fa-cart-arrow-down"></i></a></code>
       </div>
     </div>
   </div>
   <div class="accordion-item">
     <h2 class="accordion-header">
       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">        	
-      فيديو انميشن داخلي او خارجي لمدة دقيقة
+     تصميم 51 متر مربع
       </button>
     </h2>
     <div id="collapseFive" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
       <div class="accordion-body">
-        <strong>مقابل 3500 د.م</strong> إضافية على سعر الخدمة. سيزيد مدة التنفيذ 5 أيام إضافية.</br> <code><a class="text-danger" href="#">شراء من هنا <i class="fa-solid fa-cart-arrow-down"></i></a></code>
+        <strong>مقابل 1500 د.م</strong> إضافية على سعر الخدمة. سيزيد مدة التنفيذ 5 أيام إضافية.</br> <code><a class="text-danger" href="#">شراء من هنا <i class="fa-solid fa-cart-arrow-down"></i></a></code>
       </div>
     </div>
   </div>
   <div class="accordion-item">
     <h2 class="accordion-header">
       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">        	   	
-تصميم خارجي لسور الفيلا وتنسيق اللاند سكيب
+      تصميم 120 متر
       </button>
     </h2>
     <div id="collapseSix" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
       <div class="accordion-body">
-        <strong>مقابل 3500 د.م</strong> إضافية على سعر الخدمة. سيزيد مدة التنفيذ 4 أيام إضافية.</br> <code><a class="text-danger" href="#">شراء من هنا <i class="fa-solid fa-cart-arrow-down"></i></a></code>
+        <strong>مقابل 2750 د.م</strong> إضافية على سعر الخدمة. سيزيد مدة التنفيذ 14 يوم إضافي</br> <code><a class="text-danger" href="#">شراء من هنا <i class="fa-solid fa-cart-arrow-down"></i></a></code>
       </div>
     </div>
   </div>
@@ -209,27 +197,27 @@
                 <div class="card-body">
                   <!-- Badge--><span class="badge rounded-pill badge-warning">للبيع</span>
                   <!-- Wishlist Button--><a class="wishlist-btn" href="#"><i class="fa-solid fa-heart">                       </i></a>
-                  <!-- Thumbnail --><a class="product-thumbnail d-block" href="single-archi-interior.html"><img class="mb-2" src="img/product/archi/3.png" alt="">
+                  <!-- Thumbnail --><a class="product-thumbnail d-block" href="single-archi-3d.html"><img class="mb-2" src="img/product/archi/2.png" alt="">
                    
-                  <!-- Product Title --><a class="product-title" href="single-archi-interior.html">تصميم داخلي</a>
+                  <!-- Product Title --><a class="product-title" href="single-archi-3d.html">خطة ثلاثية الأبعاد</a>
                   <!-- Product Price -->
-                  <p class="sale-price">750 د.م</p></br>
+                  <p class="sale-price">500 د.م</p></br>
                   <!-- Rating -->
                   <div class="product-rating"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></div>
-                  <!-- Add to Cart --><a class="btn btn-success btn-sm" href="single-archi-interior.html"><i class="fa-solid fa-plus"></i></a>
+                  <!-- Add to Cart --><a class="btn btn-success btn-sm" href="single-archi-3d.html"><i class="fa-solid fa-plus"></i></a>
                 </div>
               </div>
               <div class="card product-card bg-gray shadow-none">
                 <div class="card-body">
                   <!-- Badge--><span class="badge rounded-pill badge-success">للبيع</span>
                   <!-- Wishlist Button--><a class="wishlist-btn" href="#"><i class="fa-solid fa-heart">                       </i></a>
-                  <!-- Thumbnail --><a class="product-thumbnail d-block" href="single-archi-2d.html"><img class="mb-2" src="img/product/archi/1.png" alt=""></a>
-                  <!-- Product Title --><a class="product-title" href="single-archi-2d.html">خطة ثنائية الأبعاد</a>
+                  <!-- Thumbnail --><a class="product-thumbnail d-block" href="#"><img class="mb-2" src="img/product/archi/1.png" alt=""></a>
+                  <!-- Product Title --><a class="product-title" href="#">خطة ثنائية الأبعاد</a>
                   <!-- Product Price -->
                   <p class="sale-price">150 د.م</p></br>
                   <!-- Rating -->
                   <div class="product-rating"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></div>
-                  <!-- Add to Cart --><a class="btn btn-success btn-sm" href="single-archi-2d.html"><i class="fa-solid fa-plus"></i></a>
+                  <!-- Add to Cart --><a class="btn btn-success btn-sm" href="#"><i class="fa-solid fa-plus"></i></a>
                 </div>
               </div>
               
@@ -244,26 +232,26 @@
               <ul class="ps-0">
                 <!-- Single User Review -->
                 <li class="single-user-review d-flex">
-                  <div class="user-thumbnail"><img src="https://avatars.hsoubcdn.com/2a557c3056e6072a14c595a2a8ae3390?s=128" alt=""></div>
+                  <div class="user-thumbnail"><img src="https://avatars.hsoubcdn.com/a9b450c1143f8241f921299d1767e965?s=128" alt=""></div>
                   <div class="rating-comment">
                     <div class="rating"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></div>
-                    <p class="comment mb-0">عمل ممتاز ، تسليم في الموعد المتفق عليه.</span>
+                    <p class="comment mb-0">شخص مبدع وخلوق وتشرفت بالعمل معاه اكثر من مرة</span>
                   </div>
                 </li>
                  <!-- Single User Review -->
                 <li class="single-user-review d-flex">
-                  <div class="user-thumbnail"><img src="https://avatars.hsoubcdn.com/be9e72fcb5bf881cd333e3db8e20427b?s=128" alt=""></div>
+                  <div class="user-thumbnail"><img src="https://avatars.hsoubcdn.com/81754faaf9e252f0ee7a8387e139e302?s=128" alt=""></div>
                   <div class="rating-comment">
                     <div class="rating"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></div>
-                    <p class="comment mb-0">ممتاز جدا وفعلا, تصميم ممتاز جدا ويقبل التعديلات وصبور مع العملاء</span>
+                    <p class="comment mb-0">محترم ومتعاون</span>
                   </div>
                 </li>
 				 <!-- Single User Review -->
                 <li class="single-user-review d-flex">
-                  <div class="user-thumbnail"><img src="https://avatars.hsoubcdn.com/9e99228678c75bb4973cf3ab17aa214a?s=128" alt=""></div>
+                  <div class="user-thumbnail"><img src="https://avatars.hsoubcdn.com/c5dffbb34376111d47a8ae3e0ecd6b01?s=128" alt=""></div>
                   <div class="rating-comment">
                     <div class="rating"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></div>
-                    <p class="comment mb-0">عمل ممتاز وتعامل راقي انصح العمل معاه وبشدة</span>
+                    <p class="comment mb-0">جيد جدا ومشكور علي المجهود</span>
                   </div>
                 </li>
               </ul>
