--- a/shop-digital-services01.html
+++ b/shop-digital-services01.html
@@ -165,13 +165,13 @@
                 <div class="card-body">
                   <!-- Badge--><span class="badge rounded-pill badge-warning">للبيع</span>
                   <!-- Wishlist Button--><a class="wishlist-btn" href="#"><i class="fa-solid fa-heart"></i></a>
-                  <!-- Thumbnail --><a class="product-thumbnail d-block" href="single-product.html"><img class="mb-2" src="img/product/digitalservices/6.png" alt=""></a>
-                  <!-- Product Title --><a class="product-title" href="single-product.html">التصميم الجرافيكي</a>
+                  <!-- Thumbnail --><a class="product-thumbnail d-block" href="single-services-smp.html"><img class="mb-2" src="img/product/digitalservices/6.png" alt=""></a>
+                  <!-- Product Title --><a class="product-title" href="single-services-smp.html">التصميم الجرافيكي</a>
                   <!-- Product Price -->
-                  <p class="sale-price">$38<span>$41</span></p>
+                  <p class="sale-price">300 د.م</p>
                   <!-- Rating -->
                   <div class="product-rating"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></div>
-                  <!-- Add to Cart --><a class="btn btn-success btn-sm" href="#"><i class="fa-solid fa-plus"></i></a>
+                  <!-- Add to Cart --><a class="btn btn-success btn-sm" href="single-services-smp.html"><i class="fa-solid fa-plus"></i></a>
                 </div>
               </div>
             </div>
@@ -181,17 +181,11 @@
                 <div class="card-body">
                   <!-- Badge--><span class="badge rounded-pill badge-warning">جديد</span>
                   <!-- Wishlist Button--><a class="wishlist-btn" href="#"><i class="fa-solid fa-heart">                       </i></a>
-                  <!-- Thumbnail --><a class="product-thumbnail d-block" href="single-product.html"><img class="mb-2" src="img/product/digitalservices/click.png" alt="">
-                    <!-- Offer Countdown Timer: Please use event time this format: YYYY/MM/DD hh:mm:ss -->
-                    <ul class="offer-countdown-timer d-flex align-items-center shadow-sm" data-countdown="2023/12/31 23:59:59">
-                      <li><span class="days">0</span>d</li>
-                      <li><span class="hours">0</span>h</li>
-                      <li><span class="minutes">0</span>m</li>
-                      <li><span class="seconds">0</span>s</li>
-                    </ul></a>
-                  <!-- Product Title --><a class="product-title" href="single-product.html">التصميم الجرافيكي</a>
+                  <!-- Thumbnail --><a class="product-thumbnail d-block" href="#"><img class="mb-2" src="img/product/digitalservices/click.png" alt="">
+                    
+                  <!-- Product Title --><a class="product-title" href="">التصميم الجرافيكي</a>
                   <!-- Product Price -->
-                  <p class="sale-price">$13<span>$42</span></p>
+                  <p class="sale-price"></p>
                   <!-- Rating -->
                   <div class="product-rating"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></div>
                   <!-- Add to Cart --><a class="btn btn-success btn-sm" href="#"><i class="fa-solid fa-plus"></i></a>
@@ -259,13 +253,13 @@
                 <div class="card-body">
                   <!-- Badge--><span class="badge rounded-pill badge-danger">-11%</span>
                   <!-- Wishlist Button--><a class="wishlist-btn" href="#"><i class="fa-solid fa-heart"></i></a>
-                  <!-- Thumbnail --><a class="product-thumbnail d-block" href="single-product.html"><img class="mb-2" src="img/product/digitalservices/10.png" alt=""></a>
-                  <!-- Product Title --><a class="product-title" href="single-product.html">إدارة وسائل التواصل الاجتماعي</a>
+                  <!-- Thumbnail --><a class="product-thumbnail d-block" href="single-services-smm.html"><img class="mb-2" src="img/product/digitalservices/10.png" alt=""></a>
+                  <!-- Product Title --><a class="product-title" href="single-services-smm.html">إدارة وسائل التواصل الاجتماعي</a>
                   <!-- Product Price -->
-                  <p class="sale-price">$21<span>$25</span></p>
+                  <p class="sale-price">150 د.م</p>
                   <!-- Rating -->
                   <div class="product-rating"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></div>
-                  <!-- Add to Cart --><a class="btn btn-success btn-sm" href="#"><i class="fa-solid fa-plus"></i></a>
+                  <!-- Add to Cart --><a class="btn btn-success btn-sm" href="single-services-smm.html"><i class="fa-solid fa-plus"></i></a>
                 </div>
               </div>
             </div>
