--- a/shop-digital-services01.html
+++ b/shop-digital-services01.html
@@ -181,14 +181,14 @@
                 <div class="card-body">
                   <!-- Badge--><span class="badge rounded-pill badge-warning">جديد</span>
                   <!-- Wishlist Button--><a class="wishlist-btn" href="#"><i class="fa-solid fa-heart">                       </i></a>
-                  <!-- Thumbnail --><a class="product-thumbnail d-block" href="#"><img class="mb-2" src="img/product/digitalservices/click.png" alt="">
+                  <!-- Thumbnail --><a class="product-thumbnail d-block" href="single-services-smads.html"><img class="mb-2" src="img/product/digitalservices/click.png" alt="">
                     
-                  <!-- Product Title --><a class="product-title" href="">التصميم الجرافيكي</a>
+                  <!-- Product Title --><a class="product-title" href="single-services-smads.html">التصميم الجرافيكي</a>
                   <!-- Product Price -->
-                  <p class="sale-price"></p>
+                  <p class="sale-price">150 د.م</p>
                   <!-- Rating -->
                   <div class="product-rating"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></div>
-                  <!-- Add to Cart --><a class="btn btn-success btn-sm" href="#"><i class="fa-solid fa-plus"></i></a>
+                  <!-- Add to Cart --><a class="btn btn-success btn-sm" href="single-services-smads.html"><i class="fa-solid fa-plus"></i></a>
                 </div>
               </div>
             </div>
