--- a/single-services-smads.html
+++ b/single-services-smads.html
@@ -66,10 +66,10 @@
 <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="img/product/digitalservices/8.webp" class="d-block w-100" alt="...">
+      <img src="img/product/digitalservices/11.webp" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="img/product/digitalservices/9.webp" class="d-block w-100" alt="...">
+      <img src="img/product/digitalservices/12.webp" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
       <img src="img/product/digitalservices/10.webp" class="d-block w-100" alt="...">
@@ -86,8 +86,8 @@
         <div class="product-title-meta-data bg-white mb-3 py-3">
           <div class="container d-flex justify-content-between rtl-flex-d-row-r">
             <div class="p-title-price">
-              <h5 class="mb-1">تصميم بوستات سوشيال ميديا وبانرات إعلانية</h5>
-              <p class="sale-price mb-0 lh-1">سعر الخدمة يبدأ من 300 د.م</p>
+              <h5 class="mb-1">تصميم اعلانات سوشيال ميديا باحترافية</h5>
+              <p class="sale-price mb-0 lh-1">سعر الخدمة يبدأ من 150 د.م</p>
             </div>
             <div class="p-wishlist-share"><a href="#"><i class="fa-solid fa-heart"></i></a></div>
           </div>
@@ -106,16 +106,18 @@
           <div class="container">
             <h6>الوصف</h6>
             <p>
-مرحبا,أهلاً بك في خدمتي تصميم بوستات سوشيال ميديا</br>
-الصورة أصدق إنباءً من الكلمة</br>
-عملاؤك لا يجذبهم الكلام ؟؟ ماذا عن الصورة ؟؟ وكيف ان كانت صورة جذابة و معبرة في نفس الوقت ؟هل تريد لفكرتك ان تسيطر على تفكير عملائك و تسلب انتباههم ؟</br>
-نحن مصممين جرافيك نقوم بتصميم بوستات سوشيال ميديا جذابة تعتمد على الفكرة المتناسقة و لدينا خبراء في هذا المجال .</p></br>
+إذا كان لديك مشروع وتبحث عن تصميم إعلاناتك بطريقة احترافية وتبحث عن التميز.
+
+سنقوم بتنفيذ تصاميم سوشيال ميديا لمشروعك ( فيسبوك .. X .. انستجرام .. واتس اب .. سناب شات ).</br>
+</p></br>
              <h6 class="text-danger">مادا نقدم</h6>
             <ul class="mb-3 ps-3">
-              <li><i class="fa-solid fa-check me-1"></i> تصميم بوست سوشيال ميديا فيسبوك أو انستغرام</li>
-              <li><i class="fa-solid fa-check me-1"></i> تسليم التصميم ملف png & jpeg بدقة عالية</li>
-              <li> <i class="fa-solid fa-check me-1"></i> امكانية التعديل ل 3 مرات</li>
+              <li><i class="fa-solid fa-check me-1"></i> الخدمة مقابل تصميم واحد فقط وتسليمه بصيغة PNG ,JPG بجودة عالية.</li>
+              <li><i class="fa-solid fa-check me-1"></i> أول ما يهمنا كبائعين هو رضى العميل عن العمل بشكل تام قبل تسليم الخدمة</li>
+              <li> <i class="fa-solid fa-check me-1"></i> دقة التسليم في المواعيد.</li>
+			  <li> <i class="fa-solid fa-check me-1"></i> تصميم إحترافي للغاية لا تزعجك بالتعديلات والأخطاء ( 2 تعديلات مجانا ).</li>
             </ul>
+			
           </div>
         </div>
 		
@@ -128,19 +130,19 @@
   <div class="accordion-item">
     <h2 class="accordion-header">
       <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-       	تسليم الملف مفتوح على صيغة psd أو al
+       	تعديل للمرة الثالثة.
       </button>
     </h2>
     <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
       <div class="accordion-body">
-        <strong>مقابل 450 د.م</strong> إضافية على سعر الخدمة.</br> <code><a class="text-danger" href="#">شراء من هنا <i class="fa-solid fa-cart-arrow-down"></i></a></code>
+        <strong>مقابل 300 د.م</strong> إضافية على سعر الخدمة.</br> <code><a class="text-danger" href="#">شراء من هنا <i class="fa-solid fa-cart-arrow-down"></i></a></code>
       </div>
     </div>
   </div>
   <div class="accordion-item">
     <h2 class="accordion-header">
       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-         تصميم غلاف و صورة للصفحة الشخصية (فيسبوك أو انستغرام ) 
+         بوست اضافي
       </button>
     </h2>
     <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
@@ -152,24 +154,36 @@
   <div class="accordion-item">
     <h2 class="accordion-header">
       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">        	
-        4 تصاميم إضافية لبوستات سوشيال ميديا أو بانرات إعلانية
+        عدم العرض في معرض الاعمال
       </button>
     </h2>
     <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
       <div class="accordion-body">
-        <strong>مقابل 1200 د.م</strong> إضافية على سعر الخدمة. سيزيد مدة التنفيذ يوم إضافي.</br> <code><a class="text-danger" href="#">شراء من هنا <i class="fa-solid fa-cart-arrow-down"></i></a></code>
+        <strong>مقابل 450 د.م</strong> إضافية على سعر الخدمة.</br> <code><a class="text-danger" href="#">شراء من هنا <i class="fa-solid fa-cart-arrow-down"></i></a></code>
       </div>
     </div>
   </div>
   <div class="accordion-item">
     <h2 class="accordion-header">
       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">        	
-        12تصميم اضافي على الخدمة
+        تسليم الملف ب صيغة PSD صيغة مفتوحة المصدر
       </button>
     </h2>
     <div id="collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
       <div class="accordion-body">
-        <strong>مقابل 3150 د.م</strong> إضافية على سعر الخدمة. سيزيد مدة التنفيذ 7 أيام إضافية.</br> <code><a class="text-danger" href="#">شراء من هنا <i class="fa-solid fa-cart-arrow-down"></i></a></code>
+        <strong>مقابل 600 د.م</strong> إضافية على سعر الخدمة.</br> <code><a class="text-danger" href="#">شراء من هنا <i class="fa-solid fa-cart-arrow-down"></i></a></code>
+      </div>
+    </div>
+  </div>
+  <div class="accordion-item">
+    <h2 class="accordion-header">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">        	
+        5 تصاميم احترافية
+      </button>
+    </h2>
+    <div id="collapseSix" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+      <div class="accordion-body">
+        <strong>مقابل 750 د.م</strong> إضافية على سعر الخدمة. سيزيد مدة التنفيذ 3 أيام إضافية.</br> <code><a class="text-danger" href="#">شراء من هنا <i class="fa-solid fa-cart-arrow-down"></i></a></code>
       </div>
     </div>
   </div>
@@ -213,7 +227,7 @@
                 <div class="card-body">
                   <!-- Badge--><span class="badge rounded-pill badge-success">للبيع</span>
                   <!-- Wishlist Button--><a class="wishlist-btn" href="#"><i class="fa-solid fa-heart">                       </i></a>
-                  <!-- Thumbnail --><a class="product-thumbnail d-block" href="#"><img class="mb-2" src="img/product/digitalservices/click.png" alt=""></a>
+                  <!-- Thumbnail --><a class="product-thumbnail d-block" href="#"><img class="mb-2" src="img/product/digitalservices/6.png" alt=""></a>
                   <!-- Product Title --><a class="product-title" href="#">التصميم الجرافيكي</a>
                   <!-- Product Price -->
                   <p class="sale-price">000 د.م</p></br>
@@ -234,26 +248,26 @@
               <ul class="ps-0">
                 <!-- Single User Review -->
                 <li class="single-user-review d-flex">
-                  <div class="user-thumbnail"><img src="https://avatars.hsoubcdn.com/c90843a6db24106521a6a444c05ffdf7?s=128" alt=""></div>
+                  <div class="user-thumbnail"><img src="https://avatars.hsoubcdn.com/4f762ebf20c96076ca0bcf85592b6774?s=128" alt=""></div>
                   <div class="rating-comment">
                     <div class="rating"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></div>
-                    <p class="comment mb-0">تعامل مميز شكرا الك</span>
+                    <p class="comment mb-0">اتشرف اني عميل دائم عند فريق نينجا</span>
                   </div>
                 </li>
                  <!-- Single User Review -->
                 <li class="single-user-review d-flex">
-                  <div class="user-thumbnail"><img src="https://avatars.hsoubcdn.com/bdad7e0137a032b74b3d17bc307209ac?s=128" alt=""></div>
+                  <div class="user-thumbnail"><img src="https://avatars.hsoubcdn.com/03a64eaa3efa0af3acd90a63ec393bb2?s=128" alt=""></div>
                   <div class="rating-comment">
                     <div class="rating"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></div>
-                    <p class="comment mb-0">ممتاز وسريع</span>
+                    <p class="comment mb-0">عمل ممتاز</span>
                   </div>
                 </li>
 				 <!-- Single User Review -->
                 <li class="single-user-review d-flex">
-                  <div class="user-thumbnail"><img src="https://avatars.hsoubcdn.com/4525feb869fd7fb91cbf75273b1ad3bc?s=128" alt=""></div>
+                  <div class="user-thumbnail"><img src="https://avatars.hsoubcdn.com/99a449489670f9f378dcced324061bed?s=128" alt=""></div>
                   <div class="rating-comment">
                     <div class="rating"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></div>
-                    <p class="comment mb-0">تعامل سلس وسريع ممتاز</span>
+                    <p class="comment mb-0">فريق نينجا مبدعين والتصميم الخاصة بهم متميزة يهتمون بكل التفاصيل وسرعة في الانجاز مااحتجت اسوي اي تعديل مو أخر تعامل بإذن الله شكرا فريق نينجا</span>
                   </div>
                 </li>
               </ul>
