--- a/shop-digital-services01.html
+++ b/shop-digital-services01.html
@@ -126,20 +126,14 @@
                 <div class="card-body">
                   <!-- Badge--><span class="badge rounded-pill badge-danger">-18%</span>
                   <!-- Wishlist Button--><a class="wishlist-btn" href="#"><i class="fa-solid fa-heart">                       </i></a>
-                  <!-- Thumbnail --><a class="product-thumbnail d-block" href="single-product.html"><img class="mb-2" src="img/product/digitalservices/4.png" alt="">
-                    <!-- Offer Countdown Timer: Please use event time this format: YYYY/MM/DD hh:mm:ss -->
-                    <ul class="offer-countdown-timer d-flex align-items-center shadow-sm" data-countdown="2022/12/23 00:21:29">
-                      <li><span class="days">0</span>d</li>
-                      <li><span class="hours">0</span>h</li>
-                      <li><span class="minutes">0</span>m</li>
-                      <li><span class="seconds">0</span>s</li>
-                    </ul></a>
-                  <!-- Product Title --><a class="product-title" href="single-product.html">التصميم الجرافيكي</a>
+                  <!-- Thumbnail --><a class="product-thumbnail d-block" href="single-services-smlogo.html"><img class="mb-2" src="img/product/digitalservices/4.png" alt="">
+                   
+                  <!-- Product Title --><a class="product-title" href="single-services-smlogo.html">التصميم الجرافيكي</a>
                   <!-- Product Price -->
-                  <p class="sale-price">$87<span>$92</span></p>
+                  <p class="sale-price">450 د.م</p>
                   <!-- Rating -->
                   <div class="product-rating"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></div>
-                  <!-- Add to Cart --><a class="btn btn-success btn-sm" href="#"><i class="fa-solid fa-plus"></i></a>
+                  <!-- Add to Cart --><a class="btn btn-success btn-sm" href="single-services-smlogo.html"><i class="fa-solid fa-plus"></i></a>
                 </div>
               </div>
             </div>
@@ -149,13 +143,13 @@
                 <div class="card-body">
                   <!-- Badge--><span class="badge rounded-pill badge-danger">-11%</span>
                   <!-- Wishlist Button--><a class="wishlist-btn" href="#"><i class="fa-solid fa-heart"></i></a>
-                  <!-- Thumbnail --><a class="product-thumbnail d-block" href="single-product.html"><img class="mb-2" src="img/product/digitalservices/5.png" alt=""></a>
-                  <!-- Product Title --><a class="product-title" href="single-product.html">التصميم الجرافيكي</a>
+                  <!-- Thumbnail --><a class="product-thumbnail d-block" href="single-services-smbrand.html"><img class="mb-2" src="img/product/digitalservices/5.png" alt=""></a>
+                  <!-- Product Title --><a class="product-title" href="single-services-smbrand.html">التصميم الجرافيكي</a>
                   <!-- Product Price -->
                   <p class="sale-price">$21<span>$25</span></p>
                   <!-- Rating -->
                   <div class="product-rating"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></div>
-                  <!-- Add to Cart --><a class="btn btn-success btn-sm" href="#"><i class="fa-solid fa-plus"></i></a>
+                  <!-- Add to Cart --><a class="btn btn-success btn-sm" href="single-services-smbrand.html"><i class="fa-solid fa-plus"></i></a>
                 </div>
               </div>
             </div>
