--- a/shop-digital-services01.html
+++ b/shop-digital-services01.html
@@ -146,7 +146,7 @@
                   <!-- Thumbnail --><a class="product-thumbnail d-block" href="single-services-smbrand.html"><img class="mb-2" src="img/product/digitalservices/5.png" alt=""></a>
                   <!-- Product Title --><a class="product-title" href="single-services-smbrand.html">التصميم الجرافيكي</a>
                   <!-- Product Price -->
-                  <p class="sale-price">$21<span>$25</span></p>
+                  <p class="sale-price">450 د.م</p>
                   <!-- Rating -->
                   <div class="product-rating"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></div>
                   <!-- Add to Cart --><a class="btn btn-success btn-sm" href="single-services-smbrand.html"><i class="fa-solid fa-plus"></i></a>
