--- a/single-services-smlogo.html
+++ b/single-services-smlogo.html
@@ -182,40 +182,40 @@
                 <div class="card-body">
                   <!-- Badge--><span class="badge rounded-pill badge-warning">للبيع</span>
                   <!-- Wishlist Button--><a class="wishlist-btn" href="#"><i class="fa-solid fa-heart">                       </i></a>
-                  <!-- Thumbnail --><a class="product-thumbnail d-block" href="#"><img class="mb-2" src="img/product/digitalservices/5.png" alt="">
+                  <!-- Thumbnail --><a class="product-thumbnail d-block" href="single-services-smbrand.html"><img class="mb-2" src="img/product/digitalservices/5.png" alt="">
                    
-                  <!-- Product Title --><a class="product-title" href="#">التصميم الجرافيكي</a>
+                  <!-- Product Title --><a class="product-title" href="single-services-smbrand.html">التصميم الجرافيكي</a>
                   <!-- Product Price -->
-                  <p class="sale-price">000 د.م</p></br>
+                  <p class="sale-price">450 د.م</p></br>
                   <!-- Rating -->
                   <div class="product-rating"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></div>
-                  <!-- Add to Cart --><a class="btn btn-success btn-sm" href="single-#"><i class="fa-solid fa-plus"></i></a>
+                  <!-- Add to Cart --><a class="btn btn-success btn-sm" href="single-services-smbrand.html"><i class="fa-solid fa-plus"></i></a>
                 </div>
               </div>
               <div class="card product-card bg-gray shadow-none">
                 <div class="card-body">
                   <!-- Badge--><span class="badge rounded-pill badge-success">للبيع</span>
                   <!-- Wishlist Button--><a class="wishlist-btn" href="#"><i class="fa-solid fa-heart">                       </i></a>
-                  <!-- Thumbnail --><a class="product-thumbnail d-block" href="#"><img class="mb-2" src="img/product/digitalservices/click.png" alt=""></a>
-                  <!-- Product Title --><a class="product-title" href="#">التصميم الجرافيكي</a>
+                  <!-- Thumbnail --><a class="product-thumbnail d-block" href="single-services-smads.html"><img class="mb-2" src="img/product/digitalservices/click.png" alt=""></a>
+                  <!-- Product Title --><a class="product-title" href="single-services-smads.html">التصميم الجرافيكي</a>
                   <!-- Product Price -->
-                  <p class="sale-price">000 د.م</p></br>
+                  <p class="sale-price">150 د.م</p></br>
                   <!-- Rating -->
                   <div class="product-rating"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></div>
-                  <!-- Add to Cart --><a class="btn btn-success btn-sm" href="#"><i class="fa-solid fa-plus"></i></a>
+                  <!-- Add to Cart --><a class="btn btn-success btn-sm" href="single-services-smads.html"><i class="fa-solid fa-plus"></i></a>
                 </div>
               </div>
 			  <div class="card product-card bg-gray shadow-none">
                 <div class="card-body">
                   <!-- Badge--><span class="badge rounded-pill badge-success">للبيع</span>
                   <!-- Wishlist Button--><a class="wishlist-btn" href="#"><i class="fa-solid fa-heart">                       </i></a>
-                  <!-- Thumbnail --><a class="product-thumbnail d-block" href="#"><img class="mb-2" src="img/product/digitalservices/6.png" alt=""></a>
-                  <!-- Product Title --><a class="product-title" href="#">التصميم الجرافيكي</a>
+                  <!-- Thumbnail --><a class="product-thumbnail d-block" href="single-services-smp.html"><img class="mb-2" src="img/product/digitalservices/6.png" alt=""></a>
+                  <!-- Product Title --><a class="product-title" href="single-services-smp.html">التصميم الجرافيكي</a>
                   <!-- Product Price -->
-                  <p class="sale-price">000 د.م</p></br>
+                  <p class="sale-price">300 د.م</p></br>
                   <!-- Rating -->
                   <div class="product-rating"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></div>
-                  <!-- Add to Cart --><a class="btn btn-success btn-sm" href="#"><i class="fa-solid fa-plus"></i></a>
+                  <!-- Add to Cart --><a class="btn btn-success btn-sm" href="single-services-smp.html"><i class="fa-solid fa-plus"></i></a>
                 </div>
               </div>
               
