--- a/shop-digital-services01.html
+++ b/shop-digital-services01.html
@@ -228,7 +228,7 @@
                     
                   <!-- Product Title --><a class="product-title" href="single-services-tiktok.html">إعلانات تيك توك</a>
                   <!-- Product Price -->
-                  <p class="sale-price">$87<span>$92</span></p>
+                  <p class="sale-price">1050 د.م</p>
                   <!-- Rating -->
                   <div class="product-rating"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></div>
                   <!-- Add to Cart --><a class="btn btn-success btn-sm" href="single-services-tiktok.html"><i class="fa-solid fa-plus"></i></a>
