--- a/shop-digital-services01.html
+++ b/shop-digital-services01.html
@@ -108,22 +108,6 @@
             <div class="col-6 col-md-4">
               <div class="card product-card">
                 <div class="card-body">
-                  <!-- Badge--><span class="badge rounded-pill badge-success">للبيع</span>
-                  <!-- Wishlist Button--><a class="wishlist-btn" href="#"><i class="fa-solid fa-heart">                       </i></a>
-                  <!-- Thumbnail --><a class="product-thumbnail d-block" href="single-product.html"><img class="mb-2" src="img/product/digitalservices/3.png" alt=""></a>
-                  <!-- Product Title --><a class="product-title" href="single-product.html">التسويق الرقمي</a>
-                  <!-- Product Price -->
-                  <p class="sale-price">$99<span>$113</span></p>
-                  <!-- Rating -->
-                  <div class="product-rating"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></div>
-                  <!-- Add to Cart --><a class="btn btn-success btn-sm" href="#"><i class="fa-solid fa-plus"></i></a>
-                </div>
-              </div>
-            </div>
-            <!-- Product Card -->
-            <div class="col-6 col-md-4">
-              <div class="card product-card">
-                <div class="card-body">
                   <!-- Badge--><span class="badge rounded-pill badge-danger">-18%</span>
                   <!-- Wishlist Button--><a class="wishlist-btn" href="#"><i class="fa-solid fa-heart">                       </i></a>
                   <!-- Thumbnail --><a class="product-thumbnail d-block" href="single-services-smlogo.html"><img class="mb-2" src="img/product/digitalservices/4.png" alt="">
@@ -192,13 +176,13 @@
                 <div class="card-body">
                   <!-- Badge--><span class="badge rounded-pill badge-success">جديد</span>
                   <!-- Wishlist Button--><a class="wishlist-btn" href="#"><i class="fa-solid fa-heart">                       </i></a>
-                  <!-- Thumbnail --><a class="product-thumbnail d-block" href="single-product.html"><img class="mb-2" src="img/product/digitalservices/7.png" alt=""></a>
-                  <!-- Product Title --><a class="product-title" href="single-product.html">إعلانات الفيسبوك</a>
+                  <!-- Thumbnail --><a class="product-thumbnail d-block" href="single-services-fb.html"><img class="mb-2" src="img/product/digitalservices/7.png" alt=""></a>
+                  <!-- Product Title --><a class="product-title" href="single-services-fb.html">إعلانات الفيسبوك</a>
                   <!-- Product Price -->
                   <p class="sale-price">150 د.م</p>
                   <!-- Rating -->
                   <div class="product-rating"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></div>
-                  <!-- Add to Cart --><a class="btn btn-success btn-sm" href="#"><i class="fa-solid fa-plus"></i></a>
+                  <!-- Add to Cart --><a class="btn btn-success btn-sm" href="single-services-fb.html"><i class="fa-solid fa-plus"></i></a>
                 </div>
               </div>
             </div>
@@ -208,13 +192,13 @@
                 <div class="card-body">
                   <!-- Badge--><span class="badge rounded-pill badge-success">للبيع</span>
                   <!-- Wishlist Button--><a class="wishlist-btn" href="#"><i class="fa-solid fa-heart">                       </i></a>
-                  <!-- Thumbnail --><a class="product-thumbnail d-block" href="single-services-fb.html"><img class="mb-2" src="img/product/digitalservices/8.png" alt=""></a>
-                  <!-- Product Title --><a class="product-title" href="single-services-fb.html">إعلانات جوجل</a>
+                  <!-- Thumbnail --><a class="product-thumbnail d-block" href="single-services-google.html"><img class="mb-2" src="img/product/digitalservices/8.png" alt=""></a>
+                  <!-- Product Title --><a class="product-title" href="single-services-google.html">إعلانات جوجل</a>
                   <!-- Product Price -->
-                  <p class="sale-price">$99<span>$113</span></p>
+                  <p class="sale-price">300 د.م</p>
                   <!-- Rating -->
                   <div class="product-rating"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></div>
-                  <!-- Add to Cart --><a class="btn btn-success btn-sm" href="single-services-fb.html"><i class="fa-solid fa-plus"></i></a>
+                  <!-- Add to Cart --><a class="btn btn-success btn-sm" href="single-services-google.html"><i class="fa-solid fa-plus"></i></a>
                 </div>
               </div>
             </div>
