--- a/shop-digital-services01.html
+++ b/shop-digital-services01.html
@@ -241,13 +241,13 @@
                 <div class="card-body">
                   <!-- Badge--><span class="badge rounded-pill badge-warning">للبيع</span>
                   <!-- Wishlist Button--><a class="wishlist-btn" href="#"><i class="fa-solid fa-heart"></i></a>
-                  <!-- Thumbnail --><a class="product-thumbnail d-block" href="single-product.html"><img class="mb-2" src="img/product/digitalservices/11.png" alt=""></a>
-                  <!-- Product Title --><a class="product-title" href="single-product.html">تسويق الفيديو</a>
+                  <!-- Thumbnail --><a class="product-thumbnail d-block" href="single-services-vd01.html"><img class="mb-2" src="img/product/digitalservices/11.png" alt=""></a>
+                  <!-- Product Title --><a class="product-title" href="single-services-vd01.html">تسويق الفيديو</a>
                   <!-- Product Price -->
                   <p class="sale-price">$38<span>$41</span></p>
                   <!-- Rating -->
                   <div class="product-rating"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></div>
-                  <!-- Add to Cart --><a class="btn btn-success btn-sm" href="#"><i class="fa-solid fa-plus"></i></a>
+                  <!-- Add to Cart --><a class="btn btn-success btn-sm" href="single-services-vd01.html"><i class="fa-solid fa-plus"></i></a>
                 </div>
               </div>
             </div>
