--- a/single-services-vd01.html
+++ b/single-services-vd01.html
@@ -63,21 +63,26 @@
     </div>
     <div class="page-content-wrapper">
 	<!-- start sliders-->
-<div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+<div id="carouselExample" class="carousel slide">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="img/product/digitalservices/40.webp" class="d-block w-100" alt="...">
+	  <video width="100%" height="255" poster="img/product/digitalservices/vd.webp" controls="controls">
+    <source src="img/product/digitalservices/vd.mp4" type="video/mp4">
+      </video>
     </div>
     <div class="carousel-item">
-      <img src="img/product/digitalservices/41.webp" class="d-block w-100" alt="...">
+	 <video width="100%" height="255" poster="img/product/digitalservices/vd02.webp" controls="controls">
+    <source src="img/product/digitalservices/vd02.mp4" type="video/mp4">
+      </video>
     </div>
     <div class="carousel-item">
-      <img src="img/product/digitalservices/42.webp" class="d-block w-100" alt="...">
+	<video width="100%" height="255" poster="img/product/digitalservices/vd03.webp" controls="controls">
+    <source src="img/product/digitalservices/vd03.mp4" type="video/mp4">
+      </video>
     </div>
-
   </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="visually-hidden">Previous</span>
   </button>
 </div>
@@ -87,8 +92,8 @@
         <div class="product-title-meta-data bg-white mb-3 py-3">
           <div class="container d-flex justify-content-between rtl-flex-d-row-r">
             <div class="p-title-price">
-              <h5 class="mb-1">إنشاء حملة إعلانية بحسابك الإعلاني علي جوجل</h5>
-              <p class="sale-price mb-0 lh-1">سعر الخدمة يبدأ من 300 د.م</p>
+              <h5 class="mb-1">فيديو موشن جرافيك احترافي 5 ثواني</h5>
+              <p class="sale-price mb-0 lh-1">سعر الخدمة يبدأ من 750 د.م</p>
             </div>
             <div class="p-wishlist-share"><a href="#"><i class="fa-solid fa-heart"></i></a></div>
           </div>
