--- a/single-services-vd01.html
+++ b/single-services-vd01.html
@@ -111,26 +111,18 @@
         <div class="p-specification bg-white mb-3 py-3">
           <div class="container">
             <h6>الوصف</h6>
-            <p>سنقوم بإنشاء حملة إعلانية بحسابك الإعلاني علي جوجل Google Ads</p></br>
+            <p>إن كنت صاحب شركة او مؤسسة او تريد التسويق لمنتج جديد فأهلا وسهلا بك</br>
+نقدم لك فيديو موشن جرافيك احترافي</br>
+باعلى جوده وأفضل سعر وفى اسرع وقت</br>
+في هذه الخدمة نقدم لك فيديو موشن جرافيك احترافي لشركتك او لمنتجك او نشاطك التجاري او تطبيقك او موقعك</p></br>
            <h6 class="text-danger">مميزات الخدمة :</h6>
             <ul class="mb-3 ps-3">
-              <li><i class="fa-solid fa-check me-1"></i>   انشاء حملة اعلانية واحده بمجموعة اعلانية واحده</li>
-              <li><i class="fa-solid fa-check me-1"></i> الإعلان لجميع الدول او لبد معين</li>
-              <li> <i class="fa-solid fa-check me-1"></i> تستطيع استهداف الجمهور المحدد</li>
-			  <li><i class="fa-solid fa-check me-1"></i>  تجهيز الكلمات المفتاحية المناسبة</li>
-			  <li><i class="fa-solid fa-check me-1"></i>  الجمهور المستهدف اوالتحميلات حقيقية وآمنة</li>
-			  <li><i class="fa-solid fa-check me-1"></i>  اضافة Ad Extensions (لبعض الاعلانات)</li>
-			  <li><i class="fa-solid fa-check me-1"></i>  اضافة وسائل شرح ومقتطفات منظمة للحملة</li>
-			  <li><i class="fa-solid fa-check me-1"></i>  متابعة الحملة الإعلانية الي ان يتم الموافقة عليها من جوجل</li>
-			  <li><i class="fa-solid fa-check me-1"></i>  مدة تنفيذ الخدمة يوم واحد والاعلان بحسابك الاعلاني وليس حسابنا</li>
+              <li><i class="fa-solid fa-check me-1"></i>   لمدة 5 ثواني مقابل خدمة واحدة ( لمدة اطول راجع التطويرات اسفل الخدمة )</li>
+              <li><i class="fa-solid fa-check me-1"></i> تسليم الفيديو بصيغة mp4 بجودة عالية full hd ( لتسليم ملفات العمل راجع التطويرات اسفل الخدمة )</li>
             </ul></br>
-			<h6 class="text-danger">ملاحظات قبل الطلب :</h6>
-            <ul class="mb-3 ps-3">
-              <li><i class="fa-solid fa-check me-1"></i>   انشاء الحملة يتم عن طريق رفعنا كمشرف في الحساب الاعلاني</li>
-              <li><i class="fa-solid fa-check me-1"></i> لانقوم بعمل اعلانات مخالفة للشريعة الاسلامية اوسياسات جوجل او انتهاكات تضر بالمستخدم</li>
-              <li> <i class="fa-solid fa-check me-1"></i>  لا يمكن طلب الغاء الخدمة بعد البدء في التنفيذ</li>
-			  <li><i class="fa-solid fa-check me-1"></i>  يختلف عدد الزوار او تحميلات التطبيق واسعارها بناء علي البلد والجمهور المستهدف</li>
-            </ul>
+			<p>
+التواصل الدائم لاطلاعك على كافة المستجدات يوم بيوم></br>
+لا يمكن الغاء الخدمة لكن فى حالة وجود اى تعديلات يتم عمل اللازم حتي ينال رضاكم</p>
           </div>
         </div>
 		
@@ -143,64 +135,51 @@
   <div class="accordion-item">
     <h2 class="accordion-header">
       <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-       	انشاء واعداد اعلان اضافي للمجموعة لاعلانية
+       	فيديو موشن جرافيك ( 10 ثواني لـ سناب شات )
       </button>
     </h2>
     <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
       <div class="accordion-body">
-        <strong>مقابل 450 د.م</strong> إضافية على سعر الخدمة</br> <code><a class="text-danger" href="#">شراء من هنا <i class="fa-solid fa-cart-arrow-down"></i></a></code>
+        <strong>مقابل 1500 د.م</strong> إضافية على سعر الخدمة. سيزيد مدة التنفيذ 4 أيام إضافية.</br> <code><a class="text-danger" href="#">شراء من هنا <i class="fa-solid fa-cart-arrow-down"></i></a></code>
       </div>
     </div>
   </div>
   <div class="accordion-item">
     <h2 class="accordion-header">
       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-        انشاء واعداد مجموعة اعلانية اضافية للحمله
+        لعدم عرض الفيديو بمعرض اعمالي
       </button>
     </h2>
     <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
      <div class="accordion-body">
-        <strong>مقابل 600 د.م</strong>  إضافية على سعر الخدمة.</br> <code><a class="text-danger" href="#">شراء من هنا <i class="fa-solid fa-cart-arrow-down"></i></a></code>
+        <strong>مقابل 2250 د.م</strong>  إضافية على سعر الخدمة.</br> <code><a class="text-danger" href="#">شراء من هنا <i class="fa-solid fa-cart-arrow-down"></i></a></code>
       </div>
     </div>
   </div>
   <div class="accordion-item">
     <h2 class="accordion-header">
       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">        	
-        متابعة اداء الحملة الاعلانية وتحسينها لمدة ثلاث ايام
+        فيديو موشن جرافيك ( 30 ثانية ) او سيناريو من 50 كلمة
       </button>
     </h2>
     <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
       <div class="accordion-body">
-        <strong>مقابل 1050 د.م</strong> إضافية على سعر الخدمة. سيزيد مدة التنفيذ 3 أيام إضافية.</br> <code><a class="text-danger" href="#">شراء من هنا <i class="fa-solid fa-cart-arrow-down"></i></a></code>
+        <strong>مقابل 3000 د.م</strong> إضافية على سعر الخدمة. سيزيد مدة التنفيذ 4 أيام إضافية.</br> <code><a class="text-danger" href="#">شراء من هنا <i class="fa-solid fa-cart-arrow-down"></i></a></code>
       </div>
     </div>
   </div>
   <div class="accordion-item">
     <h2 class="accordion-header">
       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">        	
-        إنشاء عدد 3 تصميمات مختلفة ودمجها مع الحمله الاعلانية
+        لتسليم ملفات العمل
       </button>
     </h2>
     <div id="collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
       <div class="accordion-body">
-        <strong>مقابل 1050 د.م</strong>  إضافية على سعر الخدمة. سيزيد مدة التنفيذ يوم إضافي.</br> <code><a class="text-danger" href="#">شراء من هنا <i class="fa-solid fa-cart-arrow-down"></i></a></code>
+        <strong>مقابل 3750 د.م</strong>  إضافية على سعر الخدمة.</br> <code><a class="text-danger" href="#">شراء من هنا <i class="fa-solid fa-cart-arrow-down"></i></a></code>
       </div>
     </div>
   </div>
-  <div class="accordion-item">
-    <h2 class="accordion-header">
-      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">        	
-        متابعة اداء الحملة الاعلانية وتحسينها لمدة اسبوع
-      </button>
-    </h2>
-    <div id="collapseSix" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-      <div class="accordion-body">
-        <strong>مقابل 1800 د.م</strong>  إضافية على سعر الخدمة. سيزيد مدة التنفيذ 7 أيام إضافية.</br> <code><a class="text-danger" href="#">شراء من هنا <i class="fa-solid fa-cart-arrow-down"></i></a></code>
-      </div>
-    </div>
-  </div>
-
 </div></div></div>
   
 <!-- Pricing Table -->
@@ -213,26 +192,26 @@
               <ul class="ps-0">
                 <!-- Single User Review -->
                 <li class="single-user-review d-flex">
-                  <div class="user-thumbnail"><img src="https://avatars.hsoubcdn.com/0ccbe753f581a04e03a3f62f01851332?s=128" alt=""></div>
+                  <div class="user-thumbnail"><img src="https://avatars.hsoubcdn.com/9ab35be2841dc6563c057de4d30d80d1?s=128" alt=""></div>
                   <div class="rating-comment">
                     <div class="rating"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></div>
-                    <p class="comment mb-0">كل الشكر والتقدير ليكم ان شاء الله سيكون بينا تعامل اكبر مستقبلا</span>
+                    <p class="comment mb-0">يعطيك العافية شغله رهيب ورائع</span>
                   </div>
                 </li>
                  <!-- Single User Review -->
                 <li class="single-user-review d-flex">
-                  <div class="user-thumbnail"><img src="https://avatars.hsoubcdn.com/265f79ad7487cfb6c396a565222c1650?s=128" alt=""></div>
+                  <div class="user-thumbnail"><img src="https://avatars.hsoubcdn.com/1d08fe0ab9a014305d2251cfe2a83c01?s=128" alt=""></div>
                   <div class="rating-comment">
                     <div class="rating"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></div>
-                    <p class="comment mb-0">يعطيكم العافيه خدمة سريعه ومرتبة واشكركم على توضيح التفاصيل ومتابعتها في الحمله</span>
+                    <p class="comment mb-0">وقت التسليم وسرعة الخدمة ممتاز</span>
                   </div>
                 </li>
 				 <!-- Single User Review -->
                 <li class="single-user-review d-flex">
-                  <div class="user-thumbnail"><img src="https://avatars.hsoubcdn.com/6955af0ff310320fb9432a3bd52b4d6e?s=128" alt=""></div>
+                  <div class="user-thumbnail"><img src="https://avatars.hsoubcdn.com/99cf49f0dfbf91786c2c1429fecb300f?s=128" alt=""></div>
                   <div class="rating-comment">
                     <div class="rating"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></div>
-                    <p class="comment mb-0">شكرا جدا</span>
+                    <p class="comment mb-0">يعطيك الف عافيه شغل ولا اروع واخلاق عاليه الله يرزقك كل ماتتمنى</span>
                   </div>
                 </li>
               </ul>
