--- a/shop-digital-services01.html
+++ b/shop-digital-services01.html
@@ -94,13 +94,13 @@
                 <div class="card-body">
                   <!-- Badge--><span class="badge rounded-pill badge-success">للبيع</span>
                   <!-- Wishlist Button--><a class="wishlist-btn" href="#"><i class="fa-solid fa-heart"> </i></a>
-                  <!-- Thumbnail --><a class="product-thumbnail d-block" href="#"><img class="mb-2" src="img/product/digitalservices/2.png" alt=""></a>
-                  <!-- Product Title --><a class="product-title" href="#">التسويق الرقمي</a>
+                  <!-- Thumbnail --><a class="product-thumbnail d-block" href="single-services-seo.html"><img class="mb-2" src="img/product/digitalservices/2.png" alt=""></a>
+                  <!-- Product Title --><a class="product-title" href="single-services-seo.html">التسويق الرقمي</a>
                   <!-- Product Price -->
-                  <p class="sale-price">$74<span>$99</span></p>
+                  <p class="sale-price">750 د.م</p>
                   <!-- Rating -->
                   <div class="product-rating"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></div>
-                  <!-- Add to Cart --><a class="btn btn-success btn-sm" href="#"><i class="fa-solid fa-plus"></i></a>
+                  <!-- Add to Cart --><a class="btn btn-success btn-sm" href="single-services-seo.html"><i class="fa-solid fa-plus"></i></a>
                 </div>
               </div>
             </div>
