--- a/services.html
+++ b/services.html
@@ -83,6 +83,10 @@
             </ul>
           </li>
 		  <li><a href="settings.html"><i class="fa-solid fa-sliders"></i>إعدادات</a></li>
+		  <li><div class="form-check form-switch mb-0">
+            <label class="form-check-label text-white h6 mb-0" for="darkSwitch">تغير الوضع</label>
+            <input class="form-check-input" id="darkSwitch" type="checkbox" role="switch">
+          </div></li>
         </ul>
       </div>
     </div>
